2015-05-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tobias Frost <tobi@debian.org>:
	Bug #34 Fix compilation with GCC 5
	* src/pragma.h: Fix pragmas for GCC > 4

2014-12-10 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Bump version date.

2014-10-13 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/remote.cc (monitor): implement a "mon reset" command.

2014-09-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* tools/edbg.lua: New file.

2013-06-29 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/jtag3bp.cc (jtag3::updateBreakpoints): don't accidentally
	truncate code breakpoints to 64 KiB

2013-04-24 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/jtag2rw.cc (jtagRead, jtagWrite): Handle Xmega page sizes of
	more than 256 bytes which need to be split into multiple transfers
	on the JTAGICEmkII.

2013-04-16 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/remote.cc (talkToGdb): When returning a memory map to GDB,
	treat the possible EEPROM range just like normal RAM, so GDB
	won't refuse to load it.

2013-03-19 Joerg Wunsch <joerg.wunsch@atmel.com>

	* src/devdescr.cc (ATmega256RFR2, ATmega2564RFR2, ATmega128RFR2,
	ATmega1284RFR2, ATmega64RFR2, ATmega644RFR2):
	New devices
	* src/ioreg.cc (atmega256rfr2_io_registers): New entry, used for
	all of the ATmega*RFR2 devices.
	* src/ioreg.h: (Dito.)

2013-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2usb.cc: Turn the write operation of the packet length
	and the packet itself into an atomic one when writing to the
	upstream pipe, in order to avoid a race condition when handling
	JTAGICE3 event messages.

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3run.cc (jtag3::getProgramCounter): Add some ugly hack
	to work around problems single-stepping a SLEEP instruction
	* src/jtag3rw.cc (jtag3::jtagRead): (Dito.)

2013-01-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag3io.cc (jtag3::setDeviceDescriptor): avoid an overly
	aggressive compiler optimization on a parameter struct d3
